重构网络请求中 API key 的注入逻辑